linked about.html to main

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img src="img/lambda-black.png" />
         <nav>
           <a href="#" class="href">Home</a>
-          <a href="#" class="href">About</a>
+          <a href="about.html" class="href">About</a>
           <a href="#" class="href">Products</a>
           <a href="#" class="href">Blog</a>
           <a href="#" class="href">Contact</a>
