--- a/about.html
+++ b/about.html
@@ -13,6 +13,19 @@
 
 <body>
     <div class="container about-page">
+        <header>
+            <img src="img/lambda-black.png" />
+            <nav>
+              <a href="index.html" class="href">Home</a>
+              <a href="about.html" class="href">About</a>
+              <a href="#" class="href">Products</a>
+              <a href="#" class="href">Blog</a>
+              <a href="#" class="href">Contact</a>
+            </nav>
+          </header>
+          <img src="img/jumbo-about.png" />
+          <section class="top-content">
+            <div class="text-container">
      
     About
 
