touched up styling on main content and bottom content

--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
             <a href="#">Contact</a>
           </nav>
         </footer>
-    </div><!-- container -->
-         
+        </div>
+    </div><!-- container -->       
 </body>
 </html>
